# chatgpt_math_converter_for_mac

./: .gitignore  CHANGELOG.md  CHECKLIST.md  HOW_TO_PUBLISH.md  LICENSE  PUBLISHING.md  PUBLISHING_SUMMARY.md  PUBLISHING_TRADITIONAL.md  QUICKSTART.md  README.md  base_clipboard_listener.py  block_match_timing.md  common.py  macclip.py  main.py  marko_block_vs_inline.md  marko_math_parser.py  math_parser.py  pyproject.toml  renderer_implementation_guide.md  requirements.txt  test-local-install.ps1  winclip.py
src/chatgpt_clipboard_latex_fixer/: __init__.py  base_clipboard_listener.py  clipboard_factory.py  common.py  macclip.py  main.py  math_parser.py  winclip.py
testcases/: 001.txt  002.txt
testcases/outputs/: README.md
